infrastructure/argocd/install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-tailscale
  namespace: argocd
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argo
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
